standards as list

--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -127,27 +127,13 @@ Publishing research data might seem daunting at first, but by following these st
 <details>
   <summary>Full List of Standards for Authors</summary>
 
-  ### Use ORCID iD to identifiy authors and ROR to identifiy institutions
 
-  _Authors should provide their ORCID iD to identify the authors/creators and contributors, and their ROR identifier to identify the institution to which they are affiliated._
-
-  ### Use Dataset PID to Reference Datasets
-
-  _Authors should add the PID of their corresponding dataset(s) to the data availability statement and should add PIDs of dataset(s) to the reference section in order to specifically cite dataset(s)._
-
-  _Authors should include PIDs for datasets published by other researchers that have been reused in the references, rather than citing the corresponding article._
-
-  ### Link Datasets to Articles
-
-  _Researchers should link their datasets to be published to their corresponding articles by adding the article DOI to the dataset's DataCite metadata as a related identifier._
-
-  ### Relation for Linking Datasets to Articles
-
-  _Researchers should link their datasets to be published to their corresponding articles using the relation type `IsSupplementTo`._
-
-  ### Collection DOIs
-
-  _Researchers should use the Collection DOI provided by a repository in the data availability statements of their corresponding manuscript to wrap research data objects that are relevant to that of an article to be published._
+1. _Authors should provide their ORCID iD to identify the authors/creators and contributors, and their ROR identifier to identify the institution to which they are affiliated._
+2. _Authors should add the PID of their corresponding dataset(s) to the data availability statement and should add PIDs of dataset(s) to the reference section in order to specifically cite dataset(s)._
+3. _Authors should include PIDs for datasets published by other researchers that have been reused in the references, rather than citing the corresponding article._
+4. _Researchers should link their datasets to be published to their corresponding articles by adding the article DOI to the dataset's DataCite metadata as a related identifier._
+5. _Researchers should link their datasets to be published to their corresponding articles using the relation type `IsSupplementTo`._
+6. _Researchers should use the Collection DOI provided by a repository in the data availability statements of their corresponding manuscript to wrap research data objects that are relevant to that of an article to be published._
 
 
 </details>
