--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -7,7 +7,7 @@ slug: "/publishing_standards_authors"
 
 As a researcher in chemistry, sharing your data is crucial for advancing science and ensuring your work is accessible to others. This guide will walk you through the essential steps and considerations for publishing your research data effectively.
 
-This guide is based on our standards for data publishing for authors. You can view the full list of standards [at the end of this article](#standards)
+This guide is based on our standards for data publishing for authors. You can view the full list of standards [at the end of this article](#standards-authors-list)
 
 ## 1. Upload your Data
 
@@ -122,7 +122,7 @@ By carefully considering these factors when deciding on the timing for publishin
 
 Publishing research data might seem daunting at first, but by following these straightforward guidelines tailored for chemists, you’ll contribute positively to scientific discourse while ensuring that others can benefit from and verify your work.
 
-## Standards
+## Standards {#standards-authors-list}
 
 <details>
   <summary>Full List of Standards for Authors</summary>
