fix standards list

--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -65,15 +65,20 @@ Journals should leverage [**Scholix**](https://doi.org/10.1045/january2017-burto
 
 ## Standards {#standards-publishers-list}
 
-1. _Journals should recommend trusted chemistry-friendly research data repositories within author guidelines or data policies._
-2. _Journals should encourage authors to provide a clear data availability statement along with templates for guidance._
-3. _Journals must integrate editable templates for data availability statements into their manuscript submission systems._
-4. _Journals need to enrich Crossref DOI metadata by linking articles with corresponding datasets using appropriate identifiers._
-5. _Author guidelines must allow pre-submission of datasets prior to manuscript submission._
-6. _Research data labeled as under review must be included in peer review processes via accessible URLs._
-7. _Datasets under review must be published before associated articles are released, ensuring proper linkage through registered DOIs._
-8. _Academic publishers should utilize Scholix.org frameworks to improve connections between literature and research data._
+1. _Journals should recommend trusted, chemistry-friendly research data repositories._
+2. _Journals should recommend that authors provide a data availability statement. Author guidelines should also provide templates for illustration_
+3. _Journals should add a data availability statement to published articles and collect the necessary information through their submission systems._
+4. _Journals should use the information available in data availability statements to enhance Crossref DOI metadata by linking articles to datasets._
+5. _Journal author guidelines should explicitly encourage pre-submission of datasets._
+6. _Journal author guidelines should explicitly encourage research data to be included in the review process._
+7. _Journal author guidelines should require that datasets with status under review to be published prior to the publication of the associated article._
+7. _Journals and publishers should use Scholix.org._
 
 ---
 
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID: 0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840)
+
+
+
+
+
