add a littl more context into intro

--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -5,7 +5,7 @@ slug: "/publishing_standards_infrastructure"
 
 # A Simple Guide to Supporting Data Publishing Infrastructure
 
-As an infrastructure provider, facilitating data sharing is vital for enhancing research accessibility and collaboration within the scientific community. This guide outlines essential recommendations and considerations for improving data publishing practices in your repositories.
+As an infrastructure provider, facilitating data sharing is vital for enhancing research accessibility and collaboration within the scientific community. This guide outlines essential recommendations and considerations for improving data publishing practices in your repositories. It takes into consideration that most researchers publish their research data alongside an article published in an academic journal. 
 
 This guide is based on our standards for data publishing for infrastructure providers. You can view the full list of standards [at the end of this article](#standards-infrastructure-list).
 
