provide more context in intro

--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -6,7 +6,7 @@ slug: "/publishing_standards_publishers"
 
 # A Simple Guide to Supporting Data Publishing
 
-As an academic publisher, promoting data sharing is essential for advancing research and ensuring that findings are accessible to the scientific community. This guide outlines key recommendations and considerations for enhancing data publishing practices in your journals.
+As an academic publisher, promoting data sharing is essential for advancing research and ensuring that findings are accessible to the scientific community. This guide outlines key recommendations and considerations for journals. It aims to assist you in helping researchers succesfully publish the research data underlying their results reported in your journals and to ensure that this data is properly associated to the respective article.
 
 This guide is based on our standards for data publishing for academic publishers. You can view the full list of standards [at the end of this article](#standards-publishers-list).
 
