--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -42,7 +42,7 @@ In agreement with [Crossref's documentation on linking datasets](https://www.cro
 
 ## 5. Encourage Pre-submission of Datasets
 
-Journal author guidelines should explicitly allow pre-submission of datasets prior to manuscript submission—similar to current practices for crystallographic data published in CSD with CCDC. Early publication facilitates manuscript workflows as DOIs are registered beforehand.
+Journal author guidelines should explicitly encourage pre-submission of datasets prior to manuscript submission—similar to current practices for crystallographic data published in CSD with CCDC. Early publication facilitates manuscript workflows as DOIs are registered beforehand.
 
 :::danger Notice:
 A potential drawback is that researchers cannot link their dataset directly to an unpublished manuscript until after its publication when a DOI has been assigned; thus requiring manual updates post-publication.
