--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -13,15 +13,15 @@ This guide is based on our standards for data publishing for infrastructure prov
 
 Research data repositories should include metadata in datasets downloaded by researchers and exchanged with other resources. Generic and technical metadata is attached during the upload process, while field-specific repositories extract metadata from analytical data files provided by researchers along their lab workflows (e.g., Chemotion ELN). Once data is retrieved, this metadata should remain intact in the downloaded package, with descriptive DataCite metadata as a minimum requirement. One solution to ensure reliable file transfer is to use [BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), which enables inclusion of metadata in downloaded datasets.
 
-## 2. Structured Domain-Specific Metadata
+## 2. Incorporate Structured Domain-Specific Metadata
 
 Research data repositories should incorporate structured, domain-specific metadata in datasets downloaded by researchers and exchanged with other resources. Beyond generic schemes like [DataCite's metadata schema](https://schema.datacite.org/), including Schema.org metadata through tools like [RO-Crate](https://www.researchobject.org/) or combining RO-Crate with BagIt enhances both reliability and richness of metadata.
 
-## 3. Collection DOIs
+## 3. Provide Collection DOIs to Wrap Multiple Datasets
 
 Research data repositories should provide a Collection DOI that wraps relevant research data objects associated with a single article intended for publication. While field-specific repositories may offer DOIs for individual chemical reactions or molecules, multidisciplinary repositories provide DOIs for entire published datasets. To facilitate manuscript submission processes, each repository should enable authors to generate a [**Collection DOI**](https://chemotion.net/docs/repo/doi) that encompasses pertinent data referenced in their data availability statements.
 
-## 4. Embargo Period and Metadata Accessibility
+## 4. Provide Access to Metadata During Embargo Period
 
 Datasets published under an embargo period should restrict access to the dataset while ensuring that its metadata remains accessible—*publish* with embargo. This practice allows relevant information about the dataset to be retrievable while adhering to FAIR principles ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), granting authors first rights to their data.
 
@@ -29,17 +29,17 @@ Datasets published under an embargo period should restrict access to the dataset
 
 Research data repositories should contribute to and utilize Scholix.org as it provides a framework for improving links between scientific literature and research data across various digital objects. Scholix hubs such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/) contribute valuable information on connected digital objects, allowing academic publishers to discover corresponding datasets even after articles have been published.
 
-## 6. Access to Datasets Under Review
+## 6. Provide Access to Read-Only Datasets Under Review
 
 To facilitate inclusion of datasets in manuscript review processes, research data repositories should provide access to datasets under review through an accessible URL while maintaining non-editable status until publication occurs.
 
-## 7. URLs for Reviewer Access 
+## 7. Utilize URLs for Reviewer Access 
 
 URLs accessing datasets under review should have access credentials encoded within them rather than requiring separate login information—this avoids potential errors during communication between reviewers and submission systems.
 
-## 8. Publisher Information in DataCite Metadata
+## 8. Include Publisher Information in DataCite Metadata
 
-Research data repositories must include their name as 'publisher' along with a 'publisherIdentifier' in each dataset's DataCite metadata fields automatically populated by the repository system without user edits allowed.
+Research data repositories should include their name as 'publisher' along with a 'publisherIdentifier' in each dataset's DataCite metadata fields automatically populated by the repository system without user edits allowed.
 
 ### Example:
 >Publisher: RADAR4Chem
@@ -61,11 +61,11 @@ This ensures clear identification of where each dataset has been published both 
 
 Research data repositories should permit researchers to correct and update dataset metadata due to potential errors during initial entry—versioning may enhance transparency regarding changes made over time while enriching overall dataset descriptions according to FAIR principles ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)).
 
-## 10. Legal Issues on Dataset Abstracts 
+## 10. Inform Authors on Legal Issues on Dataset Abstracts 
 
-Repositories must inform authors about possible rights conflicts when using related article abstracts as descriptions within dataset fields; separate descriptions are recommended instead due copyright concerns.
+Repositories should inform authors about possible rights conflicts when using related article abstracts as descriptions within dataset fields; separate descriptions are recommended instead due copyright concerns.
 
-## 11. Group Licenses 
+## 11. Group Licenses According to Type
 
 Licenses offered by research data repositories should be grouped into categories distinguishing between research data licenses and software licenses; this simplifies selection processes for users navigating lengthy lists.
 
@@ -77,7 +77,7 @@ To streamline license selection, infrastructure providers should direct authors 
 
 To foster openness within shared datasets—repositories ought suggest licenses such as CC0 or CC BY over more restrictive alternatives like CC BY-SA or CC BY-NC-ND which may inhibit reuse opportunities; shared works ought be **as open as possible**, allowing others maximum freedom in utilization efforts!
 
-## 14. Creators and Contributors 
+## 14. Creators, Authors, and Contributors 
 
 Researchers typically refer to individuals involved in the publication of results as authors, particularly when working with scientific publishers. However, DataCite differentiates between authors and contributors, with contributors being assigned specific roles. To minimize confusion for researchers publishing their data, repositories should assist by labeling the field for creators in their (DataCite) metadata editors as **_Authors/Creators_**. 
 
